# grpcpp_auth

apigateway/: go.mod  main.go
apigateway/grpc_utils/: http_listener.go
apigateway/proto_pkgs/AuthService/: Auth.pb.go  Auth_grpc.pb.go
apigateway/service/login/: login.go
proto/Auth/: Auth.grpc.pb.cc  Auth.grpc.pb.h  Auth.proto
server/Auth-Manager/: CMakeLists.txt
server/Auth-Manager/include/db/: auth_fncs.hpp  db_main.hpp
server/Auth-Manager/include/interceptors/: logger.hpp
server/Auth-Manager/include/service/: auth.hpp  listener.hpp
server/Auth-Manager/proto/: Auth.pb.cc  Auth.pb.h
server/Auth-Manager/src/: main.cpp
server/Auth-Manager/src/db/: auth_fncs.cpp  db_main.cpp
server/Auth-Manager/src/service/: auth.cpp  listener.cpp
